# cgh

./: .gitignore  Cargo.toml  IDEAS.md  LICENSE.txt  README.md  build.rs  flake.nix  foo
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release.yml
src/: cgh.rs  change.rs  cli.rs  commit-msg  env.rs  gd.rs  gh.rs  main.rs  metadata.rs  util.rs
util/: smoke
