[package]
name = "gd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
atomic-counter = "1.0.1"
clap = { version = "4.5.57", features = ["derive"] }
clap_derive = "4.5.55"
dirs = "6.0.0"
git2 = { version = "0.20.4", features = ["ssh"] }
lazy_static = "1.5.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.149"
tlrepo = "0.8.0"
toml = "0.9.12"
