[package]
name = "gd"
version = "0.5.0"
license = "MIT"
edition = "2024"
description = "GitHub stacked-PR builder for those who miss Gerrit"
build = "build.rs"

[package.metadata.deb]
maintainer = "Scott Linder"
copyright = "AMD"
assets = [
    ["target/release/gd", "usr/bin/gd", "755"],
    ["gen/*.1", "usr/share/man/man1/", "644"],
    ["gen/gd.bash", "usr/share/bash-completion/completions/gd", "644"],
    ["gen/gd.fish", "usr/share/fish/vendor_completions.d/gd", "644"],
    ["gen/_gd", "usr/share/zsh/vendor-completions/_gd", "644"],
]

[build-dependencies]
clap = { version = "4.5.59", features = ["derive"] }
clap_complete = "4.5.66"
clap_mangen = "0.2.31"

[dependencies]
anyhow = "1.0.101"
atomic-counter = "1.0.1"
clap = { version = "4.5.59", features = ["derive"] }
dirs = "6.0.0"
git2 = { version = "0.20.4", features = ["ssh"] }
lazy_static = "1.5.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tlrepo = "0.8.0"
toml = "1.0.2"
