[package]
name = "cgh"
version = "0.6.0"
license = "MIT"
edition = "2024"
description = "GitHub stacked-PR builder for those who miss Gerrit"
build = "build.rs"

[package.metadata.deb]
maintainer = "Scott Linder"
copyright = "AMD"
assets = [
    ["target/release/cgh", "usr/bin/cgh", "755"],
    ["gen/*.1", "usr/share/man/man1/", "644"],
    ["gen/cgh.bash", "usr/share/bash-completion/completions/cgh", "644"],
    ["gen/cgh.fish", "usr/share/fish/vendor_completions.d/cgh", "644"],
    ["gen/_cgh", "usr/share/zsh/vendor-completions/_cgh", "644"],
]

[build-dependencies]
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.2"
clap_mangen = "0.3.0"

[dependencies]
anyhow = "1.0.102"
atomic-counter = "1.0.1"
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
git2 = { version = "0.21.0", features = ["ssh"] }
lazy_static = "1.5.0"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
tlrepo = "0.8.0"
toml = "1.1.2"
